--- a/css/soluzione.css
+++ b/css/soluzione.css
@@ -25,3 +25,15 @@
 .ex-4-square:hover{
     opacity: 0;
 }
+
+.ex-5-square{
+    transition: 1s;
+}
+
+.ex-5-square:hover{
+    transform: scale(2);
+}
+
+.ex-5-square:active{
+    transform: scale(0.5);
+}
