--- a/css/soluzione.css
+++ b/css/soluzione.css
@@ -33,7 +33,25 @@
 .ex-5-square:hover{
     transform: scale(2);
 }
-
 .ex-5-square:active{
     transform: scale(0.5);
+}
+
+.ex-6-img:hover{
+    filter: grayscale(1);
+}
+
+.ex-7-img{
+    transition: 2s;
+}
+.ex-7-img:hover{
+    filter: grayscale(0.5) sepia(0.5);
+}
+
+.ex-8-img{
+    transition: 2s;
+}
+.ex-8-img:hover{
+    filter: grayscale(0.5) sepia(0.5);
+    border-radius: 30px;
 }
