--- a/css/soluzione.css
+++ b/css/soluzione.css
@@ -55,3 +55,12 @@
     filter: grayscale(0.5) sepia(0.5);
     border-radius: 30px;
 }
+
+.ex-9-img{
+    transition: 2s;
+}
+.ex-9-img:hover{
+    filter: grayscale(0.5) sepia(0.5);
+    border-radius: 30px;
+    transform: scale(1.5);
+}
