--- a/css/soluzione.css
+++ b/css/soluzione.css
@@ -64,3 +64,12 @@
     border-radius: 30px;
     transform: scale(1.5);
 }
+
+.ex-10-icon{
+    animation: spin 1s linear infinite;
+}
+@keyframes spin{
+    0%{
+        transform: rotate(1turn);
+    }
+}
