--- a/css/soluzione.css
+++ b/css/soluzione.css
@@ -88,3 +88,33 @@
         transform: rotate(0);
     }
 }
+
+.ex-12-button:hover .ex-12-top-white{
+    animation: bianco 2s linear;
+}
+@keyframes bianco {
+    0%{
+        left: 5%;
+        top:-10px;
+    }
+    30% {
+        left: calc(100% - 20px);
+        top: -10px;
+    }
+    45% {
+        left: calc(100% - 20px);
+        top: 100%;
+    }
+    75% {
+        left: 0;
+        top: 100%;
+    }
+    90% {
+        left: -10px;
+        top: -15px;
+    }
+    100% {
+        left: 15%;
+        top: -5px;
+    }
+}
